--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -62,7 +62,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
                   Schedule:
                     TimeShift: 2
                     <<: *Workdays
@@ -75,7 +75,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
                   Schedule:
                     TimeShift: 2
                     <<: *Workdays
@@ -88,7 +88,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
                   Schedule:
                     TimeShift: 1
                     <<: *Workdays
@@ -101,7 +101,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
                   Schedule:
                     TimeShift: 2
                     <<: *Workdays
@@ -114,7 +114,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
                   Schedule:
                     TimeShift: 2
                     <<: *Workdays
@@ -140,7 +140,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
                   Schedule:
                     TimeShift: 2
                     <<: *Workdays
@@ -153,7 +153,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
                   Schedule:
                     TimeShift: 2
                     <<: *Workdays
@@ -179,7 +179,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
                   Schedule:
                     TimeShift: 2
                     <<: *Workdays
