--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -11,7 +11,7 @@ SearchAppointments: &SearchAppointments
   Name: Search Appointments
   Enabled: true
   Wait: false
-  Duration: "00:00:30"
+  Duration: "00:02:00"
 
 SearchAppointmentsDisabled: &SearchAppointmentsDisabled
   Name: Search Appointments
@@ -19,9 +19,9 @@ SearchAppointmentsDisabled: &SearchAppointmentsDisabled
 
 RussianTask: &RussianTask
   Name: Russian
-  Recursively: "00:01:00"
+  Recursively: "00:00:10"
   Parallel: true
-  Limit: 3
+  Limit: 2
 
 Worker:
   Name: Scheduler
@@ -41,145 +41,145 @@ Worker:
                     TimeShift: 2
                     <<: *Workdays
     
-    - Name: Germany
-      Parallel: true
-      Tasks:
-        - Name: Berlin
-          Parallel: true
-          Tasks:
-            - <<: *RussianTask
-              Tasks:
-                - <<: *SearchAppointments
-                  Schedule:
-                    TimeShift: 1
-                    <<: *Workdays
+    # - Name: Germany
+    #   Parallel: true
+    #   Tasks:
+    #     - Name: Berlin
+    #       Parallel: true
+    #       Tasks:
+    #         - <<: *RussianTask
+    #           Tasks:
+    #             - <<: *SearchAppointmentsDisabled
+    #               Schedule:
+    #                 TimeShift: 1
+    #                 <<: *Workdays
         
-    - Name: France
-      Parallel: true
-      Tasks:
-        - Name: Paris
-          Parallel: true
-          Tasks:
-            - <<: *RussianTask
-              Tasks:
-                - <<: *SearchAppointmentsDisabled
-                  Schedule:
-                    TimeShift: 2
-                    <<: *Workdays
+    # - Name: France
+    #   Parallel: true
+    #   Tasks:
+    #     - Name: Paris
+    #       Parallel: true
+    #       Tasks:
+    #         - <<: *RussianTask
+    #           Tasks:
+    #             - <<: *SearchAppointmentsDisabled
+    #               Schedule:
+    #                 TimeShift: 2
+    #                 <<: *Workdays
 
-    - Name: Montenegro
-      Parallel: true
-      Tasks:
-        - Name: Podgorica
-          Parallel: true
-          Tasks:
-            - <<: *RussianTask
-              Tasks:
-                - <<: *SearchAppointmentsDisabled
-                  Schedule:
-                    TimeShift: 2
-                    <<: *Workdays
+    # - Name: Montenegro
+    #   Parallel: true
+    #   Tasks:
+    #     - Name: Podgorica
+    #       Parallel: true
+    #       Tasks:
+    #         - <<: *RussianTask
+    #           Tasks:
+    #             - <<: *SearchAppointmentsDisabled
+    #               Schedule:
+    #                 TimeShift: 2
+    #                 <<: *Workdays
 
-    - Name: Ireland
-      Parallel: true
-      Tasks:
-        - Name: Dublin
-          Parallel: true
-          Tasks:
-            - <<: *RussianTask
-              Tasks:
-                - <<: *SearchAppointmentsDisabled
-                  Schedule:
-                    TimeShift: 1
-                    <<: *Workdays
+    # - Name: Ireland
+    #   Parallel: true
+    #   Tasks:
+    #     - Name: Dublin
+    #       Parallel: true
+    #       Tasks:
+    #         - <<: *RussianTask
+    #           Tasks:
+    #             - <<: *SearchAppointmentsDisabled
+    #               Schedule:
+    #                 TimeShift: 1
+    #                 <<: *Workdays
 
-    - Name: Switzerland
-      Parallel: true
-      Tasks:
-        - Name: Bern
-          Parallel: true
-          Tasks:
-            - <<: *RussianTask
-              Tasks:
-                - <<: *SearchAppointmentsDisabled
-                  Schedule:
-                    TimeShift: 2
-                    <<: *Workdays
+    # - Name: Switzerland
+    #   Parallel: true
+    #   Tasks:
+    #     - Name: Bern
+    #       Parallel: true
+    #       Tasks:
+    #         - <<: *RussianTask
+    #           Tasks:
+    #             - <<: *SearchAppointmentsDisabled
+    #               Schedule:
+    #                 TimeShift: 2
+    #                 <<: *Workdays
 
-    - Name: Finland
-      Parallel: true
-      Tasks:
-        - Name: Helsinki
-          Parallel: true
-          Tasks:
-            - <<: *RussianTask
-              Tasks:
-                - <<: *SearchAppointmentsDisabled
-                  Schedule:
-                    TimeShift: 2
-                    <<: *Workdays
+    # - Name: Finland
+    #   Parallel: true
+    #   Tasks:
+    #     - Name: Helsinki
+    #       Parallel: true
+    #       Tasks:
+    #         - <<: *RussianTask
+    #           Tasks:
+    #             - <<: *SearchAppointmentsDisabled
+    #               Schedule:
+    #                 TimeShift: 2
+    #                 <<: *Workdays
 
-    - Name: Netherlands
-      Parallel: true
-      Tasks:
-        - Name: Hague
-          Parallel: true
-          Tasks:
-            - <<: *RussianTask
-              Tasks:
-                - <<: *SearchAppointments
-                  Schedule:
-                    TimeShift: 2
-                    <<: *Workdays
+    # - Name: Netherlands
+    #   Parallel: true
+    #   Tasks:
+    #     - Name: Hague
+    #       Parallel: true
+    #       Tasks:
+    #         - <<: *RussianTask
+    #           Tasks:
+    #             - <<: *SearchAppointmentsDisabled
+    #               Schedule:
+    #                 TimeShift: 2
+    #                 <<: *Workdays
 
-    - Name: Albania
-      Parallel: true
-      Tasks:
-        - Name: Tirana
-          Parallel: true
-          Tasks:
-            - <<: *RussianTask
-              Tasks:
-                - <<: *SearchAppointmentsDisabled
-                  Schedule:
-                    TimeShift: 2
-                    <<: *Workdays
+    # - Name: Albania
+    #   Parallel: true
+    #   Tasks:
+    #     - Name: Tirana
+    #       Parallel: true
+    #       Tasks:
+    #         - <<: *RussianTask
+    #           Tasks:
+    #             - <<: *SearchAppointmentsDisabled
+    #               Schedule:
+    #                 TimeShift: 2
+    #                 <<: *Workdays
 
-    - Name: Slovenia
-      Parallel: true
-      Tasks:
-        - Name: Ljubljana
-          Parallel: true
-          Tasks:
-            - <<: *RussianTask
-              Tasks:
-                - <<: *SearchAppointmentsDisabled
-                  Schedule:
-                    TimeShift: 2
-                    <<: *Workdays
+    # - Name: Slovenia
+    #   Parallel: true
+    #   Tasks:
+    #     - Name: Ljubljana
+    #       Parallel: true
+    #       Tasks:
+    #         - <<: *RussianTask
+    #           Tasks:
+    #             - <<: *SearchAppointmentsDisabled
+    #               Schedule:
+    #                 TimeShift: 2
+    #                 <<: *Workdays
 
-    - Name: Bosnia
-      Parallel: true
-      Tasks:
-        - Name: Sarajevo
-          Parallel: true
-          Tasks:
-            - <<: *RussianTask
-              Tasks:
-                - <<: *SearchAppointments
-                  Schedule:
-                    TimeShift: 2
-                    <<: *Workdays
+    # - Name: Bosnia
+    #   Parallel: true
+    #   Tasks:
+    #     - Name: Sarajevo
+    #       Parallel: true
+    #       Tasks:
+    #         - <<: *RussianTask
+    #           Tasks:
+    #             - <<: *SearchAppointmentsDisabled
+    #               Schedule:
+    #                 TimeShift: 2
+    #                 <<: *Workdays
 
-    - Name: Hungary
-      Parallel: true
-      Tasks:
-        - Name: Budapest
-          Parallel: true
-          Tasks:
-            - <<: *RussianTask
-              Tasks:
-                - <<: *SearchAppointmentsDisabled
-                  Schedule:
-                    TimeShift: 2
-                    <<: *Workdays
+    # - Name: Hungary
+    #   Parallel: true
+    #   Tasks:
+    #     - Name: Budapest
+    #       Parallel: true
+    #       Tasks:
+    #         - <<: *RussianTask
+    #           Tasks:
+    #             - <<: *SearchAppointmentsDisabled
+    #               Schedule:
+    #                 TimeShift: 2
+    #                 <<: *Workdays
