Remove Limit property and update logging with interpolation
Updated appsettings.yaml to modify SearchAppointmentsDisabled,
remove Limit from RussianTask, and add StopWork to Worker.Schedule.
Updated fsharp-worker submodule to a new commit.

In Core.fs, Domain.fs, Graph.fs, and Scheduler.fs:
- Removed Limit property from Task type and related functions.
- Updated logging to use string interpolation.
- Adjusted order of operations in several functions.
- Removed checkLimit function and its calls.
- Specified type for timeShift in now function.

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -21,7 +21,6 @@ RussianTask: &RussianTask
   Name: Russian
   Recursively: "00:00:10"
   Parallel: true
-  Limit: 2
 
 Worker:
   Name: Scheduler
@@ -37,9 +36,10 @@ Worker:
             - <<: *RussianTask
               Tasks:
                 - <<: *SearchAppointments
-                  Schedule:
-                    TimeShift: 2
-                    <<: *Workdays
+              Schedule:
+                TimeShift: 2
+                StopWork: "2024-08-27T21:02:00"
+                <<: *Workdays
     
     # - Name: Germany
     #   Parallel: true
