--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -2,7 +2,7 @@
 
 Logging:
   LogLevel:
-    Default: Debug
+    Default: Trace
 
 Workdays: &Workdays
   Workdays: mon,tue,wed,thu,fri,sat,sun
@@ -36,150 +36,153 @@ Worker:
             - <<: *RussianTask
               Tasks:
                 - <<: *SearchAppointments
+          Schedule:
+            TimeShift: 2
+            StartTime: "11:37:00"
+            StopTime: "15:50:00"
+            <<: *Workdays
+    
+    - Name: Germany
+      Parallel: true
+      Tasks:
+        - Name: Berlin
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointmentsDisabled
+          Schedule:
+            TimeShift: 1
+            StartTime: "11:37:00"
+            StopTime: "14:18:00"
+            <<: *Workdays
+        
+    - Name: France
+      Parallel: true
+      Tasks:
+        - Name: Paris
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointmentsDisabled
               Schedule:
                 TimeShift: 2
-                StopWork: "2024-08-27T21:02:00"
                 <<: *Workdays
-    
-    # - Name: Germany
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Berlin
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 1
-    #                 <<: *Workdays
-        
-    # - Name: France
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Paris
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 2
-    #                 <<: *Workdays
 
-    # - Name: Montenegro
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Podgorica
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 2
-    #                 <<: *Workdays
+    - Name: Montenegro
+      Parallel: true
+      Tasks:
+        - Name: Podgorica
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointmentsDisabled
+              Schedule:
+                TimeShift: 2
+                <<: *Workdays
 
-    # - Name: Ireland
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Dublin
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 1
-    #                 <<: *Workdays
+    - Name: Ireland
+      Parallel: true
+      Tasks:
+        - Name: Dublin
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointmentsDisabled
+              Schedule:
+                TimeShift: 1
+                <<: *Workdays
 
-    # - Name: Switzerland
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Bern
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 2
-    #                 <<: *Workdays
+    - Name: Switzerland
+      Parallel: true
+      Tasks:
+        - Name: Bern
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointmentsDisabled
+              Schedule:
+                TimeShift: 2
+                <<: *Workdays
 
-    # - Name: Finland
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Helsinki
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 2
-    #                 <<: *Workdays
+    - Name: Finland
+      Parallel: true
+      Tasks:
+        - Name: Helsinki
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointmentsDisabled
+                  Schedule:
+                    TimeShift: 2
+                    <<: *Workdays
 
-    # - Name: Netherlands
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Hague
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 2
-    #                 <<: *Workdays
+    - Name: Netherlands
+      Parallel: true
+      Tasks:
+        - Name: Hague
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointmentsDisabled
+                  Schedule:
+                    TimeShift: 2
+                    <<: *Workdays
 
-    # - Name: Albania
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Tirana
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 2
-    #                 <<: *Workdays
+    - Name: Albania
+      Parallel: true
+      Tasks:
+        - Name: Tirana
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointmentsDisabled
+                  Schedule:
+                    TimeShift: 2
+                    <<: *Workdays
 
-    # - Name: Slovenia
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Ljubljana
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 2
-    #                 <<: *Workdays
+    - Name: Slovenia
+      Parallel: true
+      Tasks:
+        - Name: Ljubljana
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointmentsDisabled
+                  Schedule:
+                    TimeShift: 2
+                    <<: *Workdays
 
-    # - Name: Bosnia
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Sarajevo
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 2
-    #                 <<: *Workdays
+    - Name: Bosnia
+      Parallel: true
+      Tasks:
+        - Name: Sarajevo
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointmentsDisabled
+                  Schedule:
+                    TimeShift: 2
+                    <<: *Workdays
 
-    # - Name: Hungary
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Budapest
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 2
-    #                 <<: *Workdays
+    - Name: Hungary
+      Parallel: true
+      Tasks:
+        - Name: Budapest
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointmentsDisabled
+                  Schedule:
+                    TimeShift: 2
+                    <<: *Workdays
