Refactor task handling and update app settings
Updated appsettings.yaml:
- Default log level changed from Trace to Debug.
- StopTime for SearchAppointments task changed to 22:19:00.
- StopTime for SearchAppointmentsDisabled task changed to 21:07:00.

Core.fs:
- `runTask` now uses a `use` binding for `CancellationTokenSource`.
- Refactored `handleTask` to use if-else instead of match.
- `handleTask` logs "Skipped" if `task.Handler` is None.

Domain.fs:
- `Handler` field in `Task` type changed to `TaskHandler option`.

Graph.fs:
- Updated `mapTask` to handle `Handler` as an option.
- Replaced `createNode'` with `toTaskNode`.
- Refactored `create` into `createResult` and `toTaskNodes`.

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -2,7 +2,7 @@
 
 Logging:
   LogLevel:
-    Default: Trace
+    Default: Debug
 
 Workdays: &Workdays
   Workdays: mon,tue,wed,thu,fri,sat,sun
@@ -39,7 +39,7 @@ Worker:
           Schedule:
             TimeShift: 2
             StartTime: "11:37:00"
-            StopTime: "15:50:00"
+            StopTime: "22:19:00"
             <<: *Workdays
     
     - Name: Germany
@@ -54,7 +54,7 @@ Worker:
           Schedule:
             TimeShift: 1
             StartTime: "11:37:00"
-            StopTime: "14:18:00"
+            StopTime: "21:07:00"
             <<: *Workdays
         
     - Name: France
