--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -5,6 +5,8 @@ Logging:
     Default: Debug
 
 Workdays: &Workdays
+  StartTime: "09:00:00"
+  StopTime: "17:45:00"
   Workdays: mon,tue,wed,thu,fri,sat,sun
 
 SearchAppointments: &SearchAppointments
@@ -19,7 +21,7 @@ SearchAppointmentsDisabled: &SearchAppointmentsDisabled
 
 RussianTask: &RussianTask
   Name: Russian
-  Recursively: "00:00:10"
+  Recursively: "00:01:00"
   Parallel: true
 
 Worker:
@@ -38,8 +40,6 @@ Worker:
                 - <<: *SearchAppointments
           Schedule:
             TimeShift: 2
-            StartTime: "16:20:00"
-            StopTime: "16:33:00"
             <<: *Workdays
     
     - Name: Germany
@@ -52,137 +52,135 @@ Worker:
               Tasks:
                 - <<: *SearchAppointments
           Schedule:
-            TimeShift: 1
-            StartTime: "10:37:00"
-            StopTime: "15:33:00"
+            TimeShift: 2
             <<: *Workdays
         
-    # - Name: France
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Paris
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #           Schedule:
-    #             TimeShift: 2
-    #             <<: *Workdays
+    - Name: France
+      Parallel: true
+      Tasks:
+        - Name: Paris
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointments
+          Schedule:
+            TimeShift: 2
+            <<: *Workdays
 
-    # - Name: Montenegro
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Podgorica
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #           Schedule:
-    #             TimeShift: 2
-    #             <<: *Workdays
+    - Name: Montenegro
+      Parallel: true
+      Tasks:
+        - Name: Podgorica
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointments
+          Schedule:
+            TimeShift: 2
+            <<: *Workdays
 
-    # - Name: Ireland
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Dublin
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #           Schedule:
-    #             TimeShift: 1
-    #             <<: *Workdays
+    - Name: Ireland
+      Parallel: true
+      Tasks:
+        - Name: Dublin
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointments
+          Schedule:
+            TimeShift: 1
+            <<: *Workdays
 
-    # - Name: Switzerland
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Bern
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #           Schedule:
-    #             TimeShift: 2
-    #             <<: *Workdays
+    - Name: Switzerland
+      Parallel: true
+      Tasks:
+        - Name: Bern
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointments
+          Schedule:
+            TimeShift: 2
+            <<: *Workdays
 
-    # - Name: Finland
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Helsinki
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 2
-    #                 <<: *Workdays
+    - Name: Finland
+      Parallel: true
+      Tasks:
+        - Name: Helsinki
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointments
+          Schedule:
+            TimeShift: 3
+            <<: *Workdays
 
-    # - Name: Netherlands
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Hague
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 2
-    #                 <<: *Workdays
+    - Name: Netherlands
+      Parallel: true
+      Tasks:
+        - Name: Hague
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointments
+          Schedule:
+            TimeShift: 2
+            <<: *Workdays
 
-    # - Name: Albania
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Tirana
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 2
-    #                 <<: *Workdays
+    - Name: Albania
+      Parallel: true
+      Tasks:
+        - Name: Tirana
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointments
+          Schedule:
+            TimeShift: 2
+            <<: *Workdays
 
-    # - Name: Slovenia
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Ljubljana
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 2
-    #                 <<: *Workdays
+    - Name: Slovenia
+      Parallel: true
+      Tasks:
+        - Name: Ljubljana
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointments
+          Schedule:
+            TimeShift: 2
+            <<: *Workdays
 
-    # - Name: Bosnia
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Sarajevo
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 2
-    #                 <<: *Workdays
+    - Name: Bosnia
+      Parallel: true
+      Tasks:
+        - Name: Sarajevo
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointments
+          Schedule:
+            TimeShift: 2
+            <<: *Workdays
 
-    # - Name: Hungary
-    #   Parallel: true
-    #   Tasks:
-    #     - Name: Budapest
-    #       Parallel: true
-    #       Tasks:
-    #         - <<: *RussianTask
-    #           Tasks:
-    #             - <<: *SearchAppointmentsDisabled
-    #               Schedule:
-    #                 TimeShift: 2
-    #                 <<: *Workdays
+    - Name: Hungary
+      Parallel: true
+      Tasks:
+        - Name: Budapest
+          Parallel: true
+          Tasks:
+            - <<: *RussianTask
+              Tasks:
+                - <<: *SearchAppointments
+          Schedule:
+            TimeShift: 2
+            <<: *Workdays
