Refactor error handling, logging, and scheduling
- Core.fs: Handle CaptchaErrorCode without incrementing attempts in setFailedState; update error message formatting.
- Program.fs: Remove createRussianTestRequest; use Temporary.createRootTask in rootTask.
- appsettings.yaml: Change Workdays StopTime to 17:00:00.
- embassy-access-worker.fsproj: Add Temporary.fs to project.
- Subprojects: Mark fsharp-infrastructure, fsharp-persistence, fsharp-web, fsharp-worker as dirty.
- Temporary.fs: Add EmbassyAccess.Worker.Temporary module.
- .gitignore: Ignore bin, obj, and .fake directories.
- README.md: Add initial content for subprojects.
- Configuration.fs: Simplify buildNodeName in Yaml module.
- Domain.fs: Reformat extendMessage in Errors module.
- Logging.fs: Replace logError with logCritical; update log level handling.
- Parser.fs: Remove unnecessary module nesting in Infrastructure.Parser.Html.
- fsharp-infrastructure.fsproj, fsharp-persistence.fsproj: Add README.md and .gitignore.
- Domain.fs (fsharp-persistence): Remove unnecessary line in Persistence.FileSystem.Domain.
- README.md (fsharp-worker): Add overview and usage instructions.
- Captcha.fs: Introduce CaptchaErrorCode constant; update error handling.
- Client.fs: Fix formatting in ErrorReason.buildLineOpt.
- fsharp-web.fsproj, fsharp-worker.fsproj: Include .gitignore and README.md.
- Core.fs: Change log levels to Log.critical.
- Domain.fs: Make Task.Duration non-optional with default value.
- Scheduler.fs: Improve workdays handling; merge schedules comprehensively.
- Graph.fs: Simplify mapTask to provide default duration.
- Scheduler.set: Use current time adjusted by TimeShift for schedule checks.

--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -20,6 +20,7 @@
     <Compile Include="countries\Slovenia.fs" />
     <Compile Include="countries\Switzerland.fs" />
     <Compile Include="TasksStorage.fs" />
+    <Compile Include="Temporary.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   
