--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -2,11 +2,11 @@
 
 Logging:
   LogLevel:
-    Default: Debug
+    Default: Information
 
 Workdays: &Workdays
-  StartTime: "09:00:00"
-  StopTime: "17:00:00"
+  StartTime: "00:00:00"
+  StopTime: "01:50:00"
   Workdays: mon,tue,wed,thu,fri,sat,sun
 
 SearchAppointments: &SearchAppointments
@@ -14,6 +14,12 @@ SearchAppointments: &SearchAppointments
   Enabled: true
   Wait: false
   Duration: "00:02:00"
+
+MakeAppointments: &MakeAppointments
+  Name: Make Appointments
+  Enabled: true
+  Wait: false
+  Duration: "00:00:10"
 
 SearchAppointmentsDisabled: &SearchAppointmentsDisabled
   Name: Search Appointments
@@ -37,7 +43,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
           Schedule:
             TimeShift: 2
             <<: *Workdays
@@ -51,6 +57,7 @@ Worker:
             - <<: *RussianTask
               Tasks:
                 - <<: *SearchAppointments
+                - <<: *MakeAppointments
           Schedule:
             TimeShift: 2
             <<: *Workdays
@@ -63,7 +70,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
           Schedule:
             TimeShift: 2
             <<: *Workdays
@@ -76,7 +83,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
           Schedule:
             TimeShift: 2
             <<: *Workdays
@@ -89,7 +96,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
           Schedule:
             TimeShift: 1
             <<: *Workdays
@@ -102,7 +109,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
           Schedule:
             TimeShift: 2
             <<: *Workdays
@@ -115,7 +122,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
           Schedule:
             TimeShift: 3
             <<: *Workdays
@@ -128,7 +135,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
           Schedule:
             TimeShift: 2
             <<: *Workdays
@@ -141,7 +148,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
           Schedule:
             TimeShift: 2
             <<: *Workdays
@@ -154,7 +161,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
           Schedule:
             TimeShift: 2
             <<: *Workdays
@@ -167,7 +174,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
           Schedule:
             TimeShift: 2
             <<: *Workdays
@@ -180,7 +187,7 @@ Worker:
           Tasks:
             - <<: *RussianTask
               Tasks:
-                - <<: *SearchAppointments
+                - <<: *SearchAppointmentsDisabled
           Schedule:
             TimeShift: 2
             <<: *Workdays
