Replace Seq.roe with Result.choose; update logging
Replaced custom Seq.roe with Result.choose across multiple files
(Core.fs, InMemoryRepository.fs, Temporary.fs, Client.fs, Graph.fs)
for handling sequences of results. Removed Seq.roe, Seq.roes, and
Seq.raes from DSL.fs and added a new Result module with choose and
unzip functions. Updated appsettings.yaml to change logging level
to Debug and adjusted StopTime for workdays. Refactored functions
in Russian.fs to improve result handling. Marked subproject commits
as dirty in fsharp-infrastructure, fsharp-web, and fsharp-worker.

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -2,11 +2,11 @@
 
 Logging:
   LogLevel:
-    Default: Information
+    Default: Debug
 
 Workdays: &Workdays
   StartTime: "00:00:00"
-  StopTime: "18:13:00"
+  StopTime: "08:29:00"
   Workdays: mon,tue,wed,thu,fri,sat,sun
 
 SearchAppointments: &SearchAppointments
