--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="persistence\InMemoryRepository.fs" />
     <Compile Include="persistence\Repository.fs" />
     <Compile Include="embassies\russian\Domain.fs" />
+    <Compile Include="embassies\russian\Deps.fs" />
     <Compile Include="embassies\russian\Core.fs" />
     <Compile Include="Api.fs" />
     <Compile Include="Deps.fs" />
