--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -5,10 +5,16 @@
   <ItemGroup>
     <Compile Include="Domain.fs" />
     <Compile Include="Mapper.fs" />
+    <Compile Include="web\Filter.fs" />
+    <Compile Include="web\Response.fs" />
+    <Compile Include="web\TelegramRepository.fs" />
+    <Compile Include="web\Repository.fs" />
     <Compile Include="persistence\Filter.fs" />
     <Compile Include="persistence\Command.fs" />
     <Compile Include="persistence\InMemoryRepository.fs" />
     <Compile Include="persistence\Repository.fs" />
+    <Compile Include="notifications\Deps.fs" />
+    <Compile Include="notifications\Core.fs" />
     <Compile Include="embassies\russian\Domain.fs" />
     <Compile Include="embassies\russian\Deps.fs" />
     <Compile Include="embassies\russian\Core.fs" />
