Refactor notification system and update dependencies
- Added `SendNotificationDeps` type and `sendNotification` function in `Api.fs`
- Removed `sendAppointments` and `sendConfirmations` from `Api.fs`
- Updated `Deps.fs` to include `sendNotification` for `Russian` module
- Modified `processRequest` in `Deps.fs` to return `Api.ProcessRequestDeps.Russian`
- Added `Notification` type with `Appointments` and `Confirmations` cases in `Domain.fs`
- Updated `embassy-access-core.fsproj` to adjust project references
- Removed `Notifications.Core` module and related functions in `Core.fs`
- Removed `Notifications.Deps` module in `Deps.fs`
- Updated `Request` type in `Filter.fs` to include new cases
- Modified `send` and `receive` functions in `Repository.fs` to use new `Filter.Request` type
- Updated `send` function in `TelegramRepository.fs` to use new `Filter.Request` type
- Refactored `Russian.fs` to use `sendNotification` and updated related modules
- Added `Notification.fs` for `EmbassyAccess.Embassies.Russian.Notification` module
- Added `OptionAsync` module with `wrap` function in `DSL.fs`
- Updated `Client.fs` to handle new `Domain.Http` and `Domain.Telegram` cases
- Modified `Client` and `ClientFactory` types in `Domain.fs`

--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -13,11 +13,10 @@
     <Compile Include="persistence\Command.fs" />
     <Compile Include="persistence\InMemoryRepository.fs" />
     <Compile Include="persistence\Repository.fs" />
-    <Compile Include="notifications\Deps.fs" />
-    <Compile Include="notifications\Core.fs" />
     <Compile Include="embassies\russian\Domain.fs" />
     <Compile Include="embassies\russian\Deps.fs" />
     <Compile Include="embassies\russian\Core.fs" />
+    <Compile Include="embassies\russian\Notification.fs" />
     <Compile Include="Api.fs" />
     <Compile Include="Deps.fs" />
   </ItemGroup>
