Refactor messaging and correct spelling errors
Refactored messaging system by introducing new types and functions
in Api.fs, Deps.fs, and Notification.fs. Updated dependencies and
function calls to use sendMessage and receiveMessage. Corrected
spelling of "Cancelled" to "Canceled" across multiple files.
Removed obsolete web-related modules and added new notification
modules. Updated project file to reflect these changes.

--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -5,14 +5,14 @@
   <ItemGroup>
     <Compile Include="Domain.fs" />
     <Compile Include="Mapper.fs" />
-    <Compile Include="web\Filter.fs" />
-    <Compile Include="web\Response.fs" />
-    <Compile Include="web\TelegramRepository.fs" />
-    <Compile Include="web\Repository.fs" />
     <Compile Include="persistence\Filter.fs" />
     <Compile Include="persistence\Command.fs" />
     <Compile Include="persistence\InMemoryRepository.fs" />
     <Compile Include="persistence\Repository.fs" />
+    <Compile Include="notifications\Send.fs" />
+    <Compile Include="notifications\Receive.fs" />
+    <Compile Include="notifications\TelegramRepository.fs" />
+    <Compile Include="notifications\Repository.fs" />
     <Compile Include="embassies\russian\Domain.fs" />
     <Compile Include="embassies\russian\Deps.fs" />
     <Compile Include="embassies\russian\Core.fs" />
