--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -15,7 +15,7 @@
     <Compile Include="notifications\Repository.fs" />
     <Compile Include="embassies\russian\Domain.fs" />
     <Compile Include="embassies\russian\Core.fs" />
-    <Compile Include="embassies\russian\Notification.fs" />
+    <Compile Include="embassies\russian\Telegram.fs" />
     <Compile Include="embassies\russian\Deps.fs" />
     <Compile Include="Api.fs" />
     <Compile Include="Deps.fs" />
