Refactor messaging and remove obsolete modules
Refactored messaging system across multiple files:
- Api.fs: Added new types for async results, renamed functions.
- Deps.fs: Updated functions to match new types.
- Domain.fs: Renamed message types, removed RequestSender.
- Telegram.fs: Separated message creation and sending logic.
- Temporary.fs: Added BotListener module.
- appsettings.yaml: Changed Worker Wait property to false.
- Russian.fs: Updated sendNotification calls, removed BotListener.
- Client.fs: Refactored listen function, updated create function.
- Domain.fs (Web.Telegram.Domain): Refactored Token and Message types.

Removed obsolete notification-related modules:
- Receive.fs, Repository.fs, Send.fs, TelegramRepository.fs.

Updated subproject commits in fsharp-infrastructure and fsharp-web.
Added wrap function to OptionAsync and ResultAsync in DSL.fs.

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -29,7 +29,7 @@ RussianTask: &RussianTask
 Worker:
   Name: Scheduler
   Enabled: true
-  Wait: true
+  Wait: false
   Tasks:
     - Name: Serbia
       Parallel: true
