Refactor embassy-access-worker module and update dependencies

--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -23,6 +23,7 @@
     <Compile Include="countries\Switzerland.fs" />
     <Compile Include="TasksStorage.fs" />
     <Compile Include="Temporary.fs" />
+    <Compile Include="Initializer.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   
