Refactor embassy handling and update feature toggles
Mapper.fs:
- Added `create` function in `Embassy` module to initialize embassy objects.

appsettings.yaml:
- Disabled `SearchAppointments` and `MakeAppointments` features.

Telegram.fs:
- Introduced active pattern `(|IsEmbassy|IsCountry|IsCity|None|)`.
- Updated `Sender` module:
  - Removed `messageId` from `sendEmbassies`.
  - Filtered and formatted data in `sendCountries`.
  - Added `sendCities` and `sendPaload` functions.
- Updated `Receiver` module:
  - Removed `messageId` from `receiveText`.
  - Removed old active patterns.
  - Handled new active patterns in `receiveCallback`.
  - Renamed `receiveDataMessage` to `receiveMessage`.
  - Updated `receive` to use new `receiveMessage` and `receiveCallback`.

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -11,13 +11,13 @@ Workdays: &Workdays
 
 SearchAppointments: &SearchAppointments
   Name: Search appointments
-  Enabled: true
+  Enabled: false
   Wait: false
   Duration: "00:02:00"
 
 MakeAppointments: &MakeAppointments
   Name: Make appointments
-  Enabled: true
+  Enabled: false
   Wait: false
   Duration: "00:03:00"
 
