Refactor submodules and update dependencies

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -11,7 +11,7 @@ Workdays: &Workdays
 
 SearchAppointments: &SearchAppointments
   Name: Search appointments
-  Enabled: false
+  Enabled: true
   Wait: false
   Duration: "00:02:00"
 
