Add embassy-access-telegram and refactor task settings
Introduced the `embassy-access-telegram` component, including a new Telegram bot for user interaction. Updated the solution and project files to include this new component. Refactored task and schedule configuration handling into a new `Settings` module, removing the `TasksStorage` module. Updated `appsettings.yaml` to use single quotes for time settings and added new task configurations for `Germany` and `France`. Refactored `Russian.fs` to use the new configuration retrieval logic. Various other files were updated to support these changes.

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -5,25 +5,25 @@ Logging:
     Default: Debug
 
 Workdays: &Workdays
-  StartTime: "00:00:00"
-  StopTime: "23:00:00"
+  StartTime: '00:00:00'
+  StopTime: '23:00:00'
   Workdays: mon,tue,wed,thu,fri,sat,sun
 
 SearchAppointments: &SearchAppointments
   Name: Search appointments
   Enabled: true
   Wait: false
-  Duration: "00:02:00"
+  Duration: '00:02:00'
 
 MakeAppointments: &MakeAppointments
   Name: Make appointments
   Enabled: false
   Wait: false
-  Duration: "00:03:00"
+  Duration: '00:03:00'
 
 RussianTask: &RussianTask
   Name: Russian
-  Recursively: "00:01:00"
+  Recursively: '00:01:00'
   Parallel: true
 
 Worker:
@@ -44,7 +44,7 @@ Worker:
           Schedule:
             TimeShift: 2
             <<: *Workdays
-    
+
     - Name: Germany
       Parallel: true
       Tasks:
@@ -58,7 +58,7 @@ Worker:
           Schedule:
             TimeShift: 2
             <<: *Workdays
-        
+
     - Name: France
       Parallel: true
       Tasks:
