Add Telegram integration and refactor notifications
The project structure has been updated to include a new project `embassy-access-telegram` in the solution file `embassy-access.sln`. The `Notification` type in `Domain.fs` has been modified to replace `SendAppointments`, `SendConfirmations`, and `SendError` with `SearchAppointments`, `MakeConfirmations`, and `Error`.

New files and modules have been added to handle Telegram-specific functionality, including `Notification.fs`, `Consumer.fs`, `Domain.fs`, `Message.fs`, and `Producer.fs` in the `embassy-access-telegram` project. The `Program.fs` file has been updated to start listening for Telegram notifications.

The `embassy-access-worker.fsproj` file has been updated to remove references to old notification files and add a project reference to `embassy-access-telegram`. The `Core.fs` and `Telegram.fs` files related to notifications have been removed.

New modules have been introduced in the `EmbassyAccess.Persistence.Telegram` namespace to handle in-memory storage and operations for Telegram-related data, including `Filter`, `InMemoryRepository`, `Repository`, and `Command`.

The `Russian.fs` file has been updated to change the notification sending logic to use the new `Notification` type and to handle notifications differently. The `Initializer.fs` file has been updated to remove the initialization of Telegram notifications.

--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -7,8 +7,6 @@
   
   <ItemGroup>
     <Compile Include="Settings.fs" />
-    <Compile Include="notifications\Core.fs" />
-    <Compile Include="notifications\Telegram.fs" />
     <Compile Include="embassies\Russian.fs" />
     <Compile Include="countries\Albania.fs" />
     <Compile Include="countries\Bosnia.fs" />
@@ -35,6 +33,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\..\submodules\fsharp-worker\src\fsharp-worker.fsproj" />
+    <ProjectReference Include="..\embassy-access-telegram\embassy-access-telegram.fsproj" />
     <ProjectReference Include="..\embassy-access-core\embassy-access-core.fsproj" />
   </ItemGroup>
   
