--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -12,6 +12,7 @@
     <Compile Include="embassies\russian\Domain.fs" />
     <Compile Include="embassies\russian\Core.fs" />
     <Compile Include="embassies\russian\Deps.fs" />
+    <Compile Include="Notification.fs" />
     <Compile Include="Api.fs" />
     <Compile Include="Deps.fs" />
   </ItemGroup>
