--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -6,6 +6,14 @@
   </PropertyGroup>
    
   <ItemGroup>
+    <Compile Include="Domain.fs" />
+    <Compile Include="persistence\Command.fs" />
+    <Compile Include="persistence\Filter.fs" />
+    <Compile Include="persistence\InMemoryRepository.fs" />
+    <Compile Include="persistence\Repository.fs" />
+    <Compile Include="Message.fs" />
+    <Compile Include="Producer.fs" />
+    <Compile Include="Consumer.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
